@@ -17,6 +17,7 @@ All (GUI):
 - In wxScrolledWindow:DoGetBestSize, no longer adds difference between client and
   total size if we've just used the total size as the best size.
 - Fixed problem with zoom setting in print preview.
+- Fixed middle click events generation in generic wxTreeCtrl (Olly Betts)
 
 wxGTK:
 
